k8s/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend # ← Hapus namespace
  labels:
    app: frontend
    tier: web
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        tier: web
    spec:
      # securityContext:
      #  runAsNonRoot: true
      # runAsUser: 1001
      # seccompProfile:
      #   type: RuntimeDefault
      containers:
        - name: react-frontend
          image: react-frontend:latest # placeholder
          imagePullPolicy: Never
          #  securityContext:
          #    allowPrivilegeEscalation: false
          #    capabilities:
          #      drop:
          #        - ALL
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
